--- a/SpeedRacerV2/Base.lproj/Main.storyboard
+++ b/SpeedRacerV2/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,16 +14,41 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="RacerMainController" customModule="SpeedRacerV2" customModuleProvider="target" sceneMemberID="viewController">
-                    <imageView key="view" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="Odg-kH-0f8">
+                    <view key="view" contentMode="scaleToFill" id="08S-c5-YgA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </imageView>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rnp-VZ-ELl">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="car0.png" translatesAutoresizingMaskIntoConstraints="NO" id="KYS-pu-eTv" customClass="MovableUIIMageView" customModule="SpeedRacerV2" customModuleProvider="target">
+                                <rect key="frame" x="53" y="494" width="53" height="85"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <bool key="isElement" value="YES"/>
+                                </accessibility>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Rnp-VZ-ELl" firstAttribute="top" secondItem="08S-c5-YgA" secondAttribute="top" id="Ru8-cR-ECd"/>
+                            <constraint firstItem="Rnp-VZ-ELl" firstAttribute="bottom" secondItem="QZM-ah-oZs" secondAttribute="bottom" id="m2E-6q-h84"/>
+                            <constraint firstItem="Rnp-VZ-ELl" firstAttribute="trailing" secondItem="QZM-ah-oZs" secondAttribute="trailing" id="nEm-fr-En3"/>
+                            <constraint firstItem="Rnp-VZ-ELl" firstAttribute="leading" secondItem="QZM-ah-oZs" secondAttribute="leading" id="rOu-iT-Lfe"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="QZM-ah-oZs"/>
+                    </view>
                     <connections>
-                        <outlet property="mainRoad" destination="Odg-kH-0f8" id="hGD-f7-fYg"/>
+                        <outlet property="mainCar" destination="KYS-pu-eTv" id="pw1-S8-TST"/>
+                        <outlet property="mainRoad" destination="Rnp-VZ-ELl" id="Ufh-ug-GBw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="33.733133433283363"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="car0.png" width="382" height="757"/>
+    </resources>
 </document>
