--- a/SpeedRacerV2/Base.lproj/Main.storyboard
+++ b/SpeedRacerV2/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="u8d-8N-GDS">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -17,14 +17,14 @@
             <objects>
                 <viewController id="u8d-8N-GDS" customClass="StartScreenControllerViewController" customModule="SpeedRacerV2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JmZ-sb-5wU" customClass="SCNView">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background3" highlightedImage="ball" translatesAutoresizingMaskIntoConstraints="NO" id="0kb-92-gHR">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="768"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GRAND TURISMOO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MAI-9t-Tbi">
-                                <rect key="frame" x="9" y="112" width="184" height="25"/>
+                                <rect key="frame" x="9" y="136" width="184" height="25"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <color key="textColor" red="0.94509803921568625" green="0.61568627450980395" blue="0.22352941176470589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -32,7 +32,7 @@
                                 <size key="shadowOffset" width="1" height="1"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bXL-wp-M8E">
-                                <rect key="frame" x="66" y="335" width="188" height="51"/>
+                                <rect key="frame" x="66" y="359" width="243" height="51"/>
                                 <state key="normal" backgroundImage="button5"/>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" identifier="startgamesegue" id="ger-Cl-MH9"/>
@@ -66,14 +66,14 @@
             <objects>
                 <viewController storyboardIdentifier="mainController" id="BYZ-38-t0r" customClass="RacerMainController" customModule="SpeedRacerV2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="08S-c5-YgA">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rnp-VZ-ELl">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCORE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fad-fq-ydR">
-                                <rect key="frame" x="-55" y="5" width="105" height="21"/>
+                                <rect key="frame" x="0.0" y="29" width="105" height="21"/>
                                 <color key="backgroundColor" red="0.41432430889999999" green="0.53313024730000003" blue="0.58437904789999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="CZU-V0-BeP"/>
@@ -85,7 +85,7 @@
                                 <size key="shadowOffset" width="0.5" height="-1"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COINS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HQd-NI-xkM">
-                                <rect key="frame" x="215" y="5" width="105" height="21"/>
+                                <rect key="frame" x="270" y="29" width="105" height="21"/>
                                 <color key="backgroundColor" red="0.41432430889999999" green="0.53313024730000003" blue="0.58437904789999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="105" id="hpY-Ti-fKT"/>
@@ -97,9 +97,10 @@
                                 <size key="shadowOffset" width="0.5" height="-1"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jEx-dx-0gQ">
-                                <rect key="frame" x="-55" y="25" width="105" height="22"/>
+                                <rect key="frame" x="0.0" y="49" width="105" height="22"/>
                                 <color key="backgroundColor" red="0.55975697352115872" green="0.72062577997868937" blue="0.79620709196891193" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" constant="105" id="DUm-hG-sgq"/>
                                     <constraint firstAttribute="height" constant="22" id="Upx-VZ-8Wl"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
@@ -109,7 +110,7 @@
                                 <size key="shadowOffset" width="0.5" height="-1"/>
                             </label>
                             <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="number0" translatesAutoresizingMaskIntoConstraints="NO" id="lKh-TK-VLO">
-                                <rect key="frame" x="85" y="222.5" width="150" height="123"/>
+                                <rect key="frame" x="85" y="344.66666666666669" width="205" height="123"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="123" id="xRS-VA-SWu"/>
                                 </constraints>
@@ -122,7 +123,7 @@
                                 </accessibility>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xZx-fw-5HA">
-                                <rect key="frame" x="215" y="25" width="105" height="25"/>
+                                <rect key="frame" x="270" y="49" width="105" height="25"/>
                                 <color key="backgroundColor" red="0.5346284543610792" green="0.6882755644815397" blue="0.7604638924870466" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="105" id="8ar-R4-SdX"/>
@@ -137,20 +138,19 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="jEx-dx-0gQ" firstAttribute="top" secondItem="QZM-ah-oZs" secondAttribute="top" constant="5" id="0Uf-ee-Hzj"/>
+                            <constraint firstItem="jEx-dx-0gQ" firstAttribute="top" secondItem="Fad-fq-ydR" secondAttribute="bottom" constant="-1" id="0dh-Nh-t7y"/>
                             <constraint firstItem="Fad-fq-ydR" firstAttribute="baseline" secondItem="HQd-NI-xkM" secondAttribute="baseline" id="88q-dN-xTY"/>
                             <constraint firstItem="QZM-ah-oZs" firstAttribute="trailing" secondItem="Rnp-VZ-ELl" secondAttribute="trailing" id="Ga9-iE-ctY"/>
                             <constraint firstItem="Rnp-VZ-ELl" firstAttribute="top" secondItem="08S-c5-YgA" secondAttribute="top" id="Iix-NL-Ie1"/>
+                            <constraint firstItem="jEx-dx-0gQ" firstAttribute="leading" secondItem="QZM-ah-oZs" secondAttribute="leading" id="KxM-HB-H4c"/>
                             <constraint firstItem="Fad-fq-ydR" firstAttribute="firstBaseline" secondItem="HQd-NI-xkM" secondAttribute="firstBaseline" id="Me5-Ti-QXI"/>
-                            <constraint firstItem="jEx-dx-0gQ" firstAttribute="trailing" secondItem="Fad-fq-ydR" secondAttribute="trailing" id="Mqr-9V-Vsr"/>
                             <constraint firstItem="lKh-TK-VLO" firstAttribute="centerX" secondItem="08S-c5-YgA" secondAttribute="centerX" id="Veq-UO-cVr"/>
-                            <constraint firstItem="xZx-fw-5HA" firstAttribute="leading" secondItem="jEx-dx-0gQ" secondAttribute="trailing" constant="165" id="W1X-E8-vjj"/>
+                            <constraint firstItem="Fad-fq-ydR" firstAttribute="leading" secondItem="QZM-ah-oZs" secondAttribute="leading" id="Xwg-8N-Wuu"/>
                             <constraint firstItem="lKh-TK-VLO" firstAttribute="centerY" secondItem="08S-c5-YgA" secondAttribute="centerY" id="Z6W-zI-DH5"/>
                             <constraint firstItem="Fad-fq-ydR" firstAttribute="top" secondItem="08S-c5-YgA" secondAttribute="topMargin" constant="-15" id="eUd-75-xOb"/>
                             <constraint firstItem="xZx-fw-5HA" firstAttribute="trailing" secondItem="QZM-ah-oZs" secondAttribute="trailing" id="fPX-Hj-J5w"/>
                             <constraint firstItem="Rnp-VZ-ELl" firstAttribute="leading" secondItem="QZM-ah-oZs" secondAttribute="leading" id="fWR-U9-Q5R"/>
-                            <constraint firstItem="QZM-ah-oZs" firstAttribute="bottom" secondItem="Rnp-VZ-ELl" secondAttribute="bottom" id="g4y-Ax-ekb"/>
-                            <constraint firstItem="Fad-fq-ydR" firstAttribute="leading" secondItem="jEx-dx-0gQ" secondAttribute="leading" id="kov-YU-1KL"/>
+                            <constraint firstItem="QZM-ah-oZs" firstAttribute="bottom" secondItem="Rnp-VZ-ELl" secondAttribute="bottom" constant="-34" id="g4y-Ax-ekb"/>
                             <constraint firstItem="xZx-fw-5HA" firstAttribute="top" secondItem="QZM-ah-oZs" secondAttribute="top" constant="5" id="ngm-cL-Fse"/>
                             <constraint firstItem="xZx-fw-5HA" firstAttribute="trailing" secondItem="HQd-NI-xkM" secondAttribute="trailing" id="sOi-MU-okb"/>
                             <constraint firstItem="lKh-TK-VLO" firstAttribute="leading" secondItem="QZM-ah-oZs" secondAttribute="leading" constant="85" id="ydt-0B-QEA"/>
@@ -169,21 +169,21 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="204.375" y="34.859154929577464"/>
+            <point key="canvasLocation" x="204" y="34.729064039408868"/>
         </scene>
         <!--End View Controller-->
         <scene sceneID="vx3-c4-WkF">
             <objects>
                 <viewController id="oYw-ci-QUD" customClass="EndViewController" customModule="SpeedRacerV2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Wx2-gn-VPG">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background2" translatesAutoresizingMaskIntoConstraints="NO" id="DYO-oe-7Kx">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GRAND TURISMOO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UFm-gA-K0g">
-                                <rect key="frame" x="0.0" y="20" width="320" height="39"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="39"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="39" id="cS5-mb-SzG"/>
                                 </constraints>
@@ -194,7 +194,7 @@
                                 <size key="shadowOffset" width="1" height="1"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOUR SCORE:      0" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x8i-9e-Ywi">
-                                <rect key="frame" x="0.0" y="59" width="244" height="39"/>
+                                <rect key="frame" x="0.0" y="83" width="299" height="39"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="39" id="tOf-xY-CeT"/>
                                 </constraints>
@@ -204,7 +204,7 @@
                                 <color key="shadowColor" red="0.85882352941176465" green="0.29019607843137257" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BEST SCORE:            0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CIX-YY-hIC">
-                                <rect key="frame" x="0.0" y="97" width="320" height="29"/>
+                                <rect key="frame" x="0.0" y="121" width="375" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="29" id="wbN-Bz-EOd"/>
                                 </constraints>
@@ -214,10 +214,10 @@
                                 <color key="shadowColor" red="0.90980392156862744" green="0.28235294117647058" blue="0.15294117647058825" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="7eg-Od-T7D">
-                                <rect key="frame" x="65" y="269" width="100" height="30"/>
+                                <rect key="frame" x="65" y="303" width="155" height="206"/>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lgQ-Bf-48t">
-                                <rect key="frame" x="60" y="264" width="200" height="40"/>
+                                <rect key="frame" x="87.666666666666686" y="386" width="200" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="a8B-8K-o9f"/>
@@ -279,6 +279,7 @@
         <image name="number0" width="256" height="256"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="LN7-hT-18m"/>
         <segue reference="h4S-A5-A4O"/>
     </inferredMetricsTieBreakers>
 </document>
